--- a/style/sneaky.css
+++ b/style/sneaky.css
@@ -1,7 +1,17 @@
+/* stroke-linejoin: round;
+  text-anchor: middle;
+  stroke: green;
+  stroke-width: 2px;
+  fill: #fff;
+  paint-order: stroke fill; */
+
 :root {
   --primary: #ff0000;
   --btnPrimary: #e22104;
   --black: #2f2d4e;
+}
+:is(#blog) p {
+  color: dimgray;
 }
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 * {
@@ -63,6 +73,10 @@ h6 {
   color: var(--black);
   font-weight: 300;
 }
+
+/* @media screen & () {
+  
+} */
 /* mainheader end */
 
 /* font-family: "Open Sans", sans-serif;
